@@ -9,6 +9,11 @@ Version 0.6.8.1                             "Don hat"
     - correctly recognise dependencies solved by Multi-Arch:
       foreign packages (LP: #968412)
 
+- Minor bugs:
+
+  * [curses]: Use dpkg package names when calling dpkg
+              (Closes: #680333)
+
 - Internal changes:
 
   * Add (temporary) helpers for interacting with dpkg.
